--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ A. 迷走神经 B. 面神经 C. 三叉神经 D. 舌咽神经 E. 动眼神经
                     <header className="bg-white border-gray-200 dark:bg-gray-800 dark:border-gray-700 border-b p-4 sticky top-0 z-10 shadow-sm">
                         <div className="max-w-4xl mx-auto flex justify-between items-center">
                             <h1 className="text-xl font-bold flex items-center gap-2">
-                                <span className="text-blue-600 dark:text-blue-400">Anatomy</span> Master
+                                <span className="text-blue-600 dark:text-blue-400">Anatomy</span> 好人版
                                 {isRandomMode && (
                                     <span className="hidden md:flex text-xs font-normal bg-purple-100 text-purple-800 px-2 py-0.5 rounded-full dark:bg-purple-900 dark:text-purple-200 border border-purple-200 dark:border-purple-700 items-center gap-1">
                                         <Icons.Shuffle size={10}/> 随机
